# routes/authRouter.js
@@ -1,6 +1,7 @@
 const express = require("express");
 const router = express.Router();
 const AuthController = require("../controllers/auth");
+const OtpController = require("../controllers/otp");
 const ProfileController = require("../controllers/profile");
 const { authenticateUser } = require('../middlewares/authentication')
 
@@ -22,6 +23,11 @@ router.get("/getProfile",authenticateUser,ProfileController.getProfile)
 router.put("/setPin",authenticateUser,ProfileController.setPin)
 
 router.post("/verifyPin",authenticateUser,ProfileController.verifyPin)
+
+router.post("/sendOtp",authenticateUser,OtpController.sendOtp)
+
+router.post("/verifyOtp",authenticateUser,OtpController.verifyOtp)
+
 
 module.exports = router 
 //2012-12-19
